- Added "max_displacement" option to "Track" constructor. Value in pixels. If a fish moves by more than max_displacement between consecutive frames, its new position is set to NaN. Set to None or a negative value to disable.   However it's double-edged. A fish needs a NaN frame before it can jump to a far-away position, but if it does, it also needs a NaN frame before it can jump back to its true position.

--- a/track.ipynb
+++ b/track.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/media/disk2/adult_schooling/trilab-tracker'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -31,7 +42,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ../raw_videos/20191219_SF_n10_t1_dark.mp4                                                                                                                                                          \n",
+      "     Tracking: 00:27:51.37, 90.9% complete, 2021-08-12 14:06:18.69                                                                                                                                      "
+     ]
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "for m in tt.__all__:\n",
