- Added bright spot removal in tracker and viewer. See the functions "Frame.get_spot_mask" and "Frame.remove_spots" and the tracker options "spot_threshold" (brightness difference with surroundings to be considered a bright spot) and "spot_dilate" (kernel size for bright spot dilation following adaptive thresholding).
- "max_displacement" now has to be a number -- set to negative value to disable.

- Added "max_merging_distance" option to "Track" constructor to control the maximum distance between two fish to be eligible for a merger in the next frame.

--- a/track.ipynb
+++ b/track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/media/disk2/adult_schooling/trilab-tracker'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,15 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 140,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "     ../raw_videos/20191219_SF_n10_t1_dark.mp4                                                                                                                                                          \n",
-      "     Tracking: 00:27:51.37, 90.9% complete, 2021-08-12 14:06:18.69                                                                                                                                      "
+      "     Done                                                                                                                                                                                               "
      ]
     }
    ],
@@ -135,6 +137,38 @@
     "# xy = trial['data'][:,:,:2]\n",
     "# for i in range(xy.shape[1]):\n",
     "#     plt.plot(*xy[:,i,:2].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[313.16931217, 255.9457672 ],\n",
+       "        [343.73664825, 189.1252302 ]],\n",
+       "\n",
+       "       [[         nan,          nan],\n",
+       "        [339.15248227, 186.70212766]],\n",
+       "\n",
+       "       [[         nan,          nan],\n",
+       "        [339.15248227, 186.70212766]],\n",
+       "\n",
+       "       [[310.97976571, 256.99254526],\n",
+       "        [333.88499025, 184.07212476]]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trial = tt.load_trial(tracker.trial_file)\n",
+    "xy = trial['data'][:,:,:2]\n",
+    "xy[411:415,[2,3],:2]"
    ]
   },
   {
