- [analyzer.py]: Added a time cut. Whereas applying other cuts merely replaces some values with NaN, applying the time cut removes rows in the relevant arrays.
- Added directory "paper-figures" to recreate the paper's figures from trilab-tracker's tracking output. Only figures 1 and 2 so far. I also need to implement the overlap cut and use displacement-based orientations rather than body-orientations (at least if we keep using the ethovision data).

--- a/aggregate.ipynb
+++ b/aggregate.ipynb
@@ -9,6 +9,7 @@
     "from importlib import reload\n",
     "import platform, os, sys, datetime, re, itertools, warnings, pickle, bz2\n",
     "import os.path as osp\n",
+    "from os.path import join\n",
     "from glob import glob\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -41,14 +42,19 @@
    "outputs": [],
    "source": [
     "# List previously computed cuts.\n",
-    "cut_dirs = os.listdir(analysis_dir)\n",
+    "cut_dirs  = os.listdir(analysis_dir)\n",
     "print(cut_dirs)\n",
     "\n",
-    "# Load a specific cut.\n",
+    "# Pick one and load data.\n",
     "cut_label = cut_dirs[0]\n",
-    "f    = os.path.join(analysis_dir,cut_label,'trial_data')\n",
-    "data = pickle.load( open(f+'.pik','rb') )\n",
-    "globals().update(data)"
+    "cut_dir   = join(analysis_dir, cut_label)\n",
+    "stat_data = pickle.load(open(join(cut_dir,'stats.pik'), 'rb'))\n",
+    "globals().update(stat_data)\n",
+    "\n",
+    "# Directory for aggregated data/figures.\n",
+    "agg_dir = join(cut_dir, 'aggregated')\n",
+    "if not os.path.exists(agg_dir):\n",
+    "    os.mkdir(agg_dir)"
    ]
   },
   {
@@ -57,78 +63,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tank_diameter_vs_age = { 7:9.6, 14:10.4, 21:12.8, 28:17.7, 42:33.8,\n",
-    "                         56:33.8, 70:33.8, 84:3.8 }\n",
+    "R_cm = 55.5\n",
+    "\n",
+    "# Load list of trial names to use in the analysis.\n",
+    "valid_trials = open('settings/adult-trials-to-analyze.txt').readlines()\n",
+    "valid_trials = [ fn.strip() for fn in valid_trials ]\n",
     "\n",
     "# Extract trial metadata from the trial's filename.\n",
     "def parse_trial_file(trial_file, etho=False):\n",
+    "#     if etho:\n",
+    "#         trial_dir  = None\n",
+    "#         trial_name = os.path.basename(trial_file)\n",
+    "#         trial_name = trial_name.split('-')[1]\n",
+    "#     else:\n",
     "    trial_dir  = os.path.dirname(trial_file)\n",
     "    trial_name = os.path.basename(trial_dir)\n",
-    "    if etho:\n",
-    "        print(trial_name)\n",
-    "    pop,day,age,group,n_ind = trial_name.split('_')[:5]\n",
-    "    pop        = {'sf':'SF', 'pa':'Pa', 'rc':'RC'}[pop.lower()]\n",
-    "    age        = int(age[:-3])\n",
-    "    age = 42 if age==43 else (70 if age==71 else age)\n",
-    "    n_ind      = int(re.findall('\\d+',n_ind)[0])\n",
-    "    R_cm       = tank_diameter_vs_age[age]\n",
-    "    trial      = { k:v for k,v in locals().items() if k in ['trial_dir', \n",
-    "                   'trial_name', 'pop', 'age', 'group', 'n_ind'] }\n",
-    "    trial['R_cm'] = tank_diameter_vs_age.get(age,None)/2\n",
+    "    _,pop,n    = trial_name.lower().split('_')[:3]\n",
+    "    n_ind      = int(n[1:])\n",
+    "    if 'dark' in trial_name.lower():\n",
+    "        pop = pop+'-dark'\n",
+    "        # Skip dark trials until I implement one-sided background subtraction.\n",
+    "        return None\n",
+    "    \n",
+    "    if not trial_name in valid_trials:\n",
+    "        return None\n",
+    "    trial      = { k:v for k,v in locals().items() if k in ['trial_file', \n",
+    "                              'trial_dir', 'trial_name', 'pop', 'n_ind'] }\n",
+    "    trial['R_cm'] = R_cm\n",
     "    return trial\n",
     "\n",
     "\n",
     "# Select a set of trials to analyze.\n",
-    "trial_files = list(trial_data.keys())\n",
-    "\n",
+    "trial_files = list(results.keys())\n",
     "\n",
     "# Count trials of each type.\n",
-    "trials = [ parse_trial_file(f) for f in trial_files]\n",
-    "trials = pd.DataFrame(trials,index=trial_files)\n",
-    "grouped_trials = trials.groupby(['pop','age','n_ind'])\n",
+    "trials = [ parse_trial_file(f) for f in trial_files ]\n",
+    "trials = pd.DataFrame(trials, index=trial_files)\n",
+    "grouped_trials = trials.groupby(['pop','n_ind'])\n",
     "count  = pd.DataFrame(grouped_trials['trial_dir'].count().rename('count'))\n",
     "count = count.unstack(1)\n",
     "count.columns = count.columns.droplevel()\n",
     "count[pd.isna(count)] = 0\n",
     "count = count.astype(int)\n",
-    "# print('Number of trials of each type:')\n",
-    "count"
+    "display(count)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Group by population and age\n",
-    "\n",
-    "### Area and aspect ratio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = os.path.join(analysis_dir,cut_label,'aggregated','hist_areaAspect')\n",
-    "if not os.path.exists(output_dir):\n",
-    "    os.mkdir(output_dir)\n",
-    "\n",
-    "for pop,files1 in trials.groupby('pop').groups.items():\n",
-    "    fig,ax = plt.subplots(1,2,figsize=(12,3))\n",
-    "    fig.suptitle(pop)\n",
-    "    for age,files2 in trials.loc[files1].groupby('age').groups.items():\n",
-    "        for i,name in enumerate(['hist_area','hist_aspect']):\n",
-    "            b = trial_data[files2[0]][name][1]\n",
-    "            h = np.mean([trial_data[f][name][0] for f in files2],axis=0)\n",
-    "            ax[i].plot(b[:-1],h,label=f'{age}')\n",
-    "        \n",
-    "    for i in range(2):\n",
-    "        ax[i].set_title(['Fish Area','Fish Aspect Ratio'][i])\n",
-    "        ax[i].legend(title='Age (dpf)')\n",
-    "    fig.savefig(os.path.join(output_dir,f'hist_areaAspect_{pop}.png'), dpi=dpi)\n",
-    "#     plt.show()\n",
-    "    plt.close()"
+    "# Group by population and group size"
    ]
   },
   {
@@ -146,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "output_dir = os.path.join(analysis_dir,cut_label,'aggregated','validFraction')\n",
+    "output_dir = os.path.join(agg_dir,'validFraction')\n",
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
     "\n",
@@ -154,7 +138,7 @@
     "for g,files in grouped_trials.groups.items():\n",
     "    grouped_valid_fractions[g] = defaultdict(list)\n",
     "    for i,f in enumerate(files):\n",
-    "        for cut,vf in trial_data[f]['valid_fraction'].items():\n",
+    "        for cut,vf in results[f]['valid_fraction'].items():\n",
     "            grouped_valid_fractions[g][cut].append(vf)\n",
     "\n",
     "''' Boxplot of the fraction of valid frames for each type of invalidity. \n",
@@ -186,13 +170,14 @@
     "cut_types = next(iter(grouped_valid_fractions.values())).keys()\n",
     "for cut_type in cut_types:\n",
     "# for cut_type in ['final']:\n",
-    "    vf_summary = { f'{k[0]}_{k[1]}dpf_n{k[2]}':vf[cut_type] for k,vf in grouped_valid_fractions.items() }\n",
+    "    vf_summary = { f'{k[0]}_n{k[1]}':vf[cut_type] for k,vf in grouped_valid_fractions.items() }\n",
     "    plt.figure(figsize=(12,4))\n",
     "    plt.boxplot(vf_summary.values(),labels=vf_summary.keys())\n",
     "    plt.ylabel('Valid fraction')\n",
     "    plt.ylim(0,1.02)\n",
     "    plt.xticks(rotation=90)\n",
     "    plt.title(f'{cut_type} cut')\n",
+    "    plt.tight_layout()\n",
     "    plt.savefig(os.path.join(output_dir,f'validFraction_{cut_type}-cut.png'), dpi=dpi)\n",
     "#     plt.show()\n",
     "    plt.close()"
@@ -209,7 +194,7 @@
     "''' Identify trials with a higher fraction of invalid frames. '''\n",
     "\n",
     "for f in trials.index:\n",
-    "    vf = trial_data[f]['valid_fraction']\n",
+    "    vf = results[f]['valid_fraction']\n",
     "    if vf['final']<0.8:\n",
     "        print(trials.loc[f]['trial_name'])\n",
     "        print(', '.join([ f'{k}:{v:.2g}' for k,v in vf.items() ]))\n",
@@ -229,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = os.path.join(analysis_dir,cut_label,'aggregated','hist_dWall')\n",
+    "output_dir = os.path.join(agg_dir, 'hist_dWall')\n",
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
     "\n",
@@ -494,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
