--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -68,8 +68,8 @@
     "for trial_dir in trial_dirs:\n",
     "    try:\n",
     "        globals().update(tt.tracking_status(trial_dir))\n",
-    "        if status in ['complete','no log']:\n",
-    "#         if 'tracking' not in status:\n",
+    "#         if status in ['complete','no log']:\n",
+    "        if 'tracking' not in status:\n",
     "            continue\n",
     "        print(f'{status:20s} {name}')\n",
     "    except:\n",
