--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -83,9 +83,9 @@
     "#     repaired_file = osp.join(d,'repaired',fn+'-repaired'+ext)\n",
     "#     input_file = repaired_file if osp.exists(repaired_file) else input_file\n",
     "\n",
-    "#     # If a trial file already exists, skip.\n",
-    "#     if osp.exists(osp.join(output_dir,'trial.pik')):\n",
-    "#         return None\n",
+    "    # If a trial file already exists, skip.\n",
+    "    if osp.exists(osp.join(output_dir,'trial.pik')):\n",
+    "        return None\n",
     "    \n",
     "    return dict( input_video=input_file, output_dir=output_dir, \n",
     "                 n_ind=n_ind, pop=pop, trial_name=fn )\n",
@@ -184,7 +184,7 @@
    "source": [
     "# Look for pre-existing tank files in this tracking directory.\n",
     "# tank_dir = osp.relpath(osp.join(tracking_dir,'../full_21-01-17')) # None # \n",
-    "tank_dir = '.'\n",
+    "tank_dir = 'tracking_output/archive/21-08-11'\n",
     "\n",
     "#----------------------------------------------------\n",
     "\n",
