- [paper-figures] Now recreating figure 7 as well. The data in it is from Adam's simulations, which I'm not rerunning. I added "assets/figure7-data_from-adam.pik", which merely repackages the relevant data from Adam's "figure-data.pik".

--- a/paper-figures/make-figures.ipynb
+++ b/paper-figures/make-figures.ipynb
@@ -489,8 +489,8 @@
    "source": [
     "slope   = []\n",
     "# fig,axs = plt.subplots(2, 2, figsize=(6,6))\n",
-    "fig,axs = plt.subplots(1, 4, figsize=(12,3))\n",
-    "for ax,pop in zip(axs.flatten(),populations[:-1]):\n",
+    "fig,axs = plt.subplots(2, 3, figsize=(9,6))\n",
+    "for ax,pop in zip(axs.flatten(),populations):\n",
     "#     x,y  = np.array([ (k[1],m) for k,M in means.items() if k[0]==pop and k[2]=='speed' for m in M[:,0] ]).T\n",
     "    x,y  = np.array([ (n,m) for (pop_,n),M in mean_speed.items() if pop_==pop for m in M ]).T\n",
     "#     x,y  = np.array([ (n,m) for n in [1,2,5,10] for m in means[pop,n,'speed'][:,0] ]).T\n",
@@ -504,6 +504,7 @@
     "    if pop=='sf':\n",
     "        ax.set_ylabel('Mean speed when\\nactive (cm/s)')\n",
     "    ax.set_ylim(0,38)\n",
+    "axs[-1,-1].set_visible(False)\n",
     "# fig.legend(loc='center left', bbox_to_anchor=(0.95,0.5))\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -895,15 +896,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins_d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Load data.\n",
     "figure_data = pickle.load(open('data/figure3-data.pik','rb'))\n",
     "# print(figure_data.keys())\n",
@@ -1106,30 +1098,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# [Work in progress]\n",
-    "\n",
-    "Figures above use trilab-tracker data.\n",
-    "Figures below use Adam's figure data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "C62_0KhXo3L5"
@@ -1162,6 +1130,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "figure_data = pickle.load(open('assets/figure7-data_from-adam.pik','rb'))\n",
+    "# print(figure_data.keys())\n",
+    "globals().update(figure_data)\n",
+    "\n",
+    "\n",
     "gridspec = dict(wspace=0.4, bottom=0.15, left=0.01, right=0.99, top=0.97)\n",
     "fig, axs = plt.subplots(ncols=3, nrows=1, figsize=(12,3.8), gridspec_kw=gridspec)\n",
     "plt.tight_layout()\n",
@@ -1173,26 +1146,26 @@
     "    \n",
     "# Left panel: Overlaid screenshots of evasive maneuver.\n",
     "ax = axs[0]\n",
-    "evasive_tracks = mpimg.imread(fpath('fig_evasion.png'))\n",
+    "evasive_tracks = mpimg.imread('assets/fig_evasion.png')\n",
     "ax.imshow(evasive_tracks)\n",
     "ax.axis('off')\n",
     "\n",
     "\n",
     "# Middle panel: Time in center vs group size (experiments).\n",
-    "ax  = axs[1]\n",
-    "d_expt = trial_store['time-in-center_expt']\n",
+    "ax     = axs[1]\n",
+    "d_expt = fractionInCenter_experiments\n",
     "n_list = [1,2,5,10]\n",
-    "for pop in ['Pa','Mo','Ti']:\n",
+    "for pop in ['pa','mo','ti']:\n",
     "    y   = [ np.mean(d_expt[pop,n]) for n in n_list ]\n",
     "    err = [ np.std(d_expt[pop,n])/np.sqrt(len(d_expt[pop,n])-1) for n in n_list ]\n",
-    "    ax.errorbar(n_list, y, yerr=err, label=names[pop], dashes=dashes[pop], \n",
+    "    ax.errorbar(n_list, y, yerr=err, label=names[pop], ls=(0,dashes[pop]), \n",
     "                color=color_dict1[pop], alpha=0.8, **err_opt)\n",
     "ax.legend(loc='upper center', **leg_opt)\n",
     "\n",
     "\n",
     "# Right panel: Time in center vs group size (simulations).\n",
     "ax          = axs[2]\n",
-    "fic         = trial_store['time-in-center_sims']\n",
+    "fic         = fractionInCenter_simulations\n",
     "fic_models  = ['ignore', 'slow', 'avoid', 'combo']\n",
     "fic_markers = ['o', 's', '^', 'p']\n",
     "fic_colors  = ['grey', 'r', 'b', 'magenta']\n",
@@ -1215,7 +1188,7 @@
     "#     ax.legend(loc='upper left', bbox_to_anchor=(0.17,1), **leg_opt)\n",
     "\n",
     "\n",
-    "plt.savefig(fpath(\"fig7.png\"), dpi=dpi)\n",
+    "plt.savefig('fig7.png', dpi=dpi)\n",
     "plt.show()"
    ]
   },
