--- a/paper-figures/prepare-figure-data.ipynb
+++ b/paper-figures/prepare-figure-data.ipynb
@@ -74,7 +74,7 @@
     "# trilabtracker only for now\n",
     "def load_trial(trial_file, **args):\n",
     "    trial = parse_trial_file(trial_file)\n",
-    "    return tt.preprocess_trial(trial, load_timestamps=False, orientation='motion', \n",
+    "    return tt.preprocess_trial(trial, load_timestamps=False, orientation='body', \n",
     "                               wall_distance=True, n_smooth=3, buffer_frames=0, \n",
     "                               **args)\n",
     "    ''' !!!! '''\n",
