--- a/paper-figures/make-figures.ipynb
+++ b/paper-figures/make-figures.ipynb
@@ -109,8 +109,10 @@
     "dpi       = 150 # figure output resolution\n",
     "alpha_err = 0.2 # transparency for std error halos\n",
     "leg_opt   = dict( borderpad=0.3, labelspacing=0.2, handlelength=1.5,\n",
-    "                  handletextpad=0.5, borderaxespad=0.2, fontsize=14 ) # legend options\n",
-    "err_opt   = dict( lw=lw, elinewidth=lw, capthick=lw, capsize=5, barsabove=False ) # errorbar plot options\n",
+    "                  handletextpad=0.5, borderaxespad=0.2, \n",
+    "                  fontsize=14 ) # legend options\n",
+    "err_opt   = dict( lw=lw, elinewidth=lw, capthick=lw, \n",
+    "                  capsize=5, barsabove=False ) # errorbar plot options\n",
     "dashes    = dict(zip(populations, [(2,2), (3,1,1,1), (3,1,1,1,1,1), (1,1), (3,1)]))\n",
     "\n",
     "def create_color_shades(rgb, gray=False):\n",
@@ -125,11 +127,13 @@
     "\n",
     "def create_color_dictionaries(color_list, color_matrix, populations=populations):\n",
     "    color_dict1  = dict(zip( populations, color_list )) # One shade per population.\n",
-    "    color_dict4  = { (pop,n):color_matrix[i,j] for i,pop in enumerate(populations) for j,n in enumerate([1,2,5,10]) }\n",
+    "    color_dict4  = { (pop,n):color_matrix[i,j] for i,pop in enumerate(populations) \n",
+    "                     for j,n in enumerate([1,2,5,10]) }\n",
     "    # Color map interpolating between white and the default shade.\n",
     "    color_maps   = {}\n",
     "    for k,c in color_dict1.items():\n",
-    "        # First max out saturation so colors \"pop\" a bit more, unless it's a grayscale family (s=0).\n",
+    "        # First max out saturation so colors \"pop\" a bit more, \n",
+    "        # unless it's a grayscale family (s=0).\n",
     "        c = rgb_to_hsv(c)\n",
     "        if c[1]>0:\n",
     "            c = hsv_to_rgb((c[0],1,c[2]))\n",
@@ -171,7 +175,8 @@
     "    color_matrix = np.array(plt.get_cmap(k).colors).reshape((5,4,3))[:,::-1,:]\n",
     "    color_list = color_matrix[:,-1,:].copy()\n",
     "    color_schemes[k] = (color_list,color_matrix)\n",
-    "    # Keep each family's central hue, but apply custom recipe to create the shades within each family.\n",
+    "    # Keep each family's central hue, but apply custom recipe to create \n",
+    "    # the shades within each family.\n",
     "    color_list = np.array(plt.get_cmap(k).colors[::4])\n",
     "    color_matrix = np.array([create_color_shades(c) for c in color_list])\n",
     "    if k=='tab20c':\n",
@@ -576,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# ''' Look at distributions from individual trials. '''\n",
@@ -585,7 +592,7 @@
     "# # print(figure_data.keys())\n",
     "# globals().update(figure_data)\n",
     "\n",
-    "# n_list   = [10]\n",
+    "# n_list   = [1]\n",
     "# x        = speed_distribution['bin_centers']\n",
     "\n",
     "# fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(8,7))\n",
@@ -598,7 +605,7 @@
     "#     print(pop, speed_distribution[pop,10].shape)\n",
     "#     for n in n_list:\n",
     "#         for y in speed_distribution[pop,n]:\n",
-    "#             ax.plot(x, y, color=color_dict4[pop,10], lw=lw)\n",
+    "#             ax.plot(x, y, color=color_dict4[pop,n], lw=lw)\n",
     "# #     ax.legend(**leg_opt)\n",
     "#     ax.set_xlim(0,75)\n",
     "#     ax.set_ylim(0,None)\n",
@@ -1130,9 +1137,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure_data = pickle.load(open('assets/figure7-data_from-adam.pik','rb'))\n",
-    "# print(figure_data.keys())\n",
-    "globals().update(figure_data)\n",
+    "# figure_data = pickle.load(open('assets/figure7-data_from-adam.pik','rb'))\n",
+    "# # print(figure_data.keys())\n",
+    "# globals().update(figure_data)\n",
+    "\n",
+    "for fn in ['data/figure7-data.pik', 'assets/figure7-data_simulations.pik']:\n",
+    "    figure_data = pickle.load(open(fn,'rb'))\n",
+    "    # print(figure_data.keys())\n",
+    "    globals().update(figure_data)\n",
     "\n",
     "\n",
     "gridspec = dict(wspace=0.4, bottom=0.15, left=0.01, right=0.99, top=0.97)\n",
@@ -1190,6 +1202,15 @@
     "\n",
     "plt.savefig('fig7.png', dpi=dpi)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[np.mean(fractionInCenter_experiments['pa',n]) for n in [1,2,5,10]]"
    ]
   },
   {
