--- a/paper-figures/prepare-figure-data.ipynb
+++ b/paper-figures/prepare-figure-data.ipynb
@@ -50,19 +50,14 @@
     "R_cm        = 55.5\n",
     "\n",
     "# Extract trial metadata from the trial's filename.\n",
-    "def parse_trial_file(trial_file, etho=False):\n",
-    "#     if etho:\n",
-    "#         trial_dir  = None\n",
-    "#         trial_name = os.path.basename(trial_file)\n",
-    "#         trial_name = trial_name.split('-')[1]\n",
-    "#     else:\n",
+    "def parse_trial_file(trial_file):\n",
     "    trial_dir  = os.path.dirname(trial_file)\n",
     "    trial_name = os.path.basename(trial_dir)\n",
     "    _,pop,n    = trial_name.lower().split('_')[:3]\n",
     "    n_ind      = int(n[1:])\n",
     "    if 'dark' in trial_name.lower():\n",
     "        pop = pop+'-dark'\n",
-    "        # Skip dark trials until I implement one-sided background subtraction.\n",
+    "        # Skip dark trials.\n",
     "#         return {}\n",
     "    if not trial_name in valid_trials:\n",
     "        return {}\n",
@@ -70,17 +65,6 @@
     "                              'trial_dir', 'trial_name', 'pop', 'n_ind'] }\n",
     "    trial['R_cm'] = R_cm\n",
     "    return trial\n",
-    "\n",
-    "# trilabtracker only for now\n",
-    "def load_trial(trial_file, **args):\n",
-    "    trial = parse_trial_file(trial_file)\n",
-    "    return tt.preprocess_trial(trial, load_timestamps=False, orientation='body', \n",
-    "                               wall_distance=True, n_smooth=3, buffer_frames=0, \n",
-    "                               **args)\n",
-    "    ''' !!!! '''\n",
-    "    # [done] Replace orientations (data[:,:,2]) with displacement-based ones.\n",
-    "    # [!] Handle overlaps.\n",
-    "    ''' !!!! '''    \n",
     "\n",
     "# Select a set of trials to analyze.\n",
     "trial_files = sorted(glob('../tracking_output/*/trial.pik'))\n",
@@ -113,17 +97,70 @@
     "    return df[I].index.tolist()\n",
     "\n",
     "# Need two distinct cuts: one with inactive fish and one without.\n",
-    "v_inactive  = 3\n",
-    "cut_ranges0 = { 'v':[0,100], 'v_ang':[-30,30], 't':[600,1800] }\n",
-    "cut_ranges1 = { 'v':[v_inactive,100], 'v_ang':[-30,30], 't':[600,1800] }\n",
+    "v_inactive = 1\n",
+    "cut_ranges = { 'v':[0,100], 'v_ang':[-30,30], 't':[600,1800] }\n",
     "\n",
     "# Inactivity filter.\n",
     "def is_active(v, v_inactive=v_inactive, buffer_frames=0):\n",
     "    I = v>v_inactive\n",
     "    for j in range(buffer_frames):\n",
-    "        # Grow inactive region by one frame in each direction.\n",
+    "        # Grow invalid region by one frame in each direction.\n",
     "        I[1:-1] = I[0:-2] & I[1:-1] & I[2:]\n",
-    "    return I"
+    "    return I\n",
+    "\n",
+    "# trilabtracker only for now\n",
+    "def load_trial(trial_file, remove_inactive=False, cut_ranges=cut_ranges, **args):\n",
+    "    trial = parse_trial_file(trial_file)\n",
+    "    trial = tt.preprocess_trial(trial, load_timestamps=False, orientation='body', \n",
+    "                                wall_distance=True, n_smooth=0, \n",
+    "                                buffer_frames=[0,0,0,0,0,1], remove_occlusions=True, \n",
+    "                                cut_ranges=cut_ranges, **args)\n",
+    "    ''' !!!! '''\n",
+    "    # [!] Handle occlusions.\n",
+    "    ''' !!!! '''\n",
+    "    if remove_inactive:\n",
+    "        I = is_active(trial['v'], v_inactive=v_inactive, buffer_frames=1)\n",
+    "#         ['valid','frame_list','time']\n",
+    "        for k in ['data','pos','vel','acc','v','d_wall']:\n",
+    "            if k in trial.keys():\n",
+    "                trial[k][~I] = np.nan\n",
+    "    return trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "for m in tt.__all__:\n",
+    "    eval(f'reload(tt.{m})')\n",
+    "reload(tt)\n",
+    "\n",
+    "# List trials with >50% inactivity.\n",
+    "inactive_trials = []\n",
+    "for trial_file in tqdm(trials.index):\n",
+    "    trial = load_trial(trial_file)\n",
+    "#     print(trial['trial_name'],trial['cut_fraction']['occl'])\n",
+    "    globals().update(trial)\n",
+    "    fraction_inactive = np.count_nonzero(v<v_inactive)/np.count_nonzero(np.isfinite(v))\n",
+    "    if fraction_inactive>0.5:\n",
+    "        inactive_trials.append(trial_file)\n",
+    "#     break\n",
+    "display(inactive_trials)\n",
+    "\n",
+    "# # Discard those trials from the analysis.\n",
+    "# trials = trials.drop(index=inactive_trials)\n",
+    "\n",
+    "# # Count trials of each type.\n",
+    "# grouped_trials = trials.drop(index=inactive_trials).groupby(['pop','n_ind'])\n",
+    "# count  = pd.DataFrame(grouped_trials['trial_dir'].count().rename('count'))\n",
+    "# count = count.unstack(1)\n",
+    "# count.columns = count.columns.droplevel().astype(int)\n",
+    "# count[pd.isna(count)] = 0\n",
+    "# count = count.astype(int)\n",
+    "# display(count)"
    ]
   },
   {
@@ -142,10 +179,9 @@
    "outputs": [],
    "source": [
     "fig_data    = { k:defaultdict(list) for k in ['density', 'nematic', 'median'] }\n",
-    "cut_ranges  = cut_ranges0\n",
     "bins        = R_cm - np.sqrt(np.linspace(R_cm**2,0,20))\n",
     "for trial_file in tqdm(matching_trials(n_ind=1)):\n",
-    "    trial = load_trial(trial_file, cut_ranges=cut_ranges)\n",
+    "    trial = load_trial(trial_file)\n",
     "    globals().update(trial)\n",
     "    # Area density and nematic OP vs distance to the wall.\n",
     "    vals       = d_wall.flatten()\n",
@@ -192,10 +228,9 @@
    "outputs": [],
    "source": [
     "fig_data    = { k:defaultdict(list) for k in ['speed_distribution', 'inactive_fraction'] }\n",
-    "cut_ranges  = cut_ranges0\n",
     "bins        = np.linspace(*cut_ranges['v'],101)\n",
     "for trial_file in tqdm(trials.index):\n",
-    "    trial = load_trial(trial_file, cut_ranges=cut_ranges)\n",
+    "    trial = load_trial(trial_file)\n",
     "    globals().update(trial)\n",
     "    if pop=='sf':\n",
     "        h,_  = np.histogram(v.flatten(), bins=bins, density=True)\n",
@@ -230,13 +265,11 @@
     "reload(tt)\n",
     "\n",
     "fig_data    = { k:defaultdict(list) for k in ['speed_distribution', 'mean_speed'] }\n",
-    "cut_ranges  = cut_ranges1\n",
     "bins        = np.linspace(*cut_ranges['v'],101)\n",
-    "for trial_file in tqdm(trials.index):\n",
-    "    trial = load_trial(trial_file, cut_ranges=cut_ranges)\n",
+    "for trial_file in tqdm(trials.index.drop(inactive_trials)):\n",
+    "    trial = load_trial(trial_file, remove_inactive=True)\n",
     "    globals().update(trial)\n",
-    "#     h,_   = np.histogram(v.flatten(), bins=bins, density=True)\n",
-    "    h,_   = np.histogram(v[is_active(v)].flatten(), bins=bins, density=True)\n",
+    "    h,_   = np.histogram(v.flatten(), bins=bins, density=True)\n",
     "    fig_data['speed_distribution'][pop,n_ind].append(h)\n",
     "    fig_data['mean_speed'][pop,n_ind].append(np.nanmean(v))\n",
     "for k,v in fig_data['speed_distribution'].items():\n",
@@ -267,16 +300,11 @@
     "reload(tt)\n",
     "\n",
     "fig_data    = { k:defaultdict(list) for k in ['angSpeed_distribution'] }\n",
-    "cut_ranges  = cut_ranges1\n",
-    "# bins        = np.linspace(0,cut_ranges['v_ang'][1],61)\n",
-    "# bins        = np.concatenate([np.linspace(0,2,20)[:-1],\n",
-    "#                               np.linspace(2,cut_ranges['v_ang'][1],40)])\n",
     "bins        = np.linspace(0,np.sqrt(cut_ranges['v_ang'][1]),61)**2\n",
-    "for trial_file in tqdm(trials.index):\n",
-    "    trial = load_trial(trial_file, cut_ranges=cut_ranges)\n",
+    "for trial_file in tqdm(trials.index.drop(inactive_trials)):\n",
+    "    trial = load_trial(trial_file, remove_inactive=True)\n",
     "    globals().update(trial)\n",
-    "#     vals  = np.absolute(vel[:,:,2])\n",
-    "    vals  = np.absolute(vel[is_active(v),2])\n",
+    "    vals  = np.absolute(vel[:,:,2])\n",
     "    h,_   = np.histogram(vals.flatten(), bins=bins, density=True)\n",
     "    fig_data['angSpeed_distribution'][pop,n_ind].append(h)\n",
     "for k,v in fig_data['angSpeed_distribution'].items():\n",
@@ -308,14 +336,13 @@
     "\n",
     "# fig_data    = { k:defaultdict(list) for k in ['distAng_heatmap','cos_mean'] }\n",
     "fig_data    = defaultdict(lambda: defaultdict(list))\n",
-    "cut_ranges  = cut_ranges0\n",
     "bins_d      = np.arange(0,2*R_cm+1,1)\n",
     "bins_a      = np.linspace(0,180,112)\n",
     "d0          = 10 # distance threshold for close-range\n",
-    "for trial_file in tqdm(trials.index):\n",
+    "for trial_file in tqdm(trials.index.drop(inactive_trials)):\n",
     "    if trials.loc[trial_file,'n_ind'] == 1:\n",
     "        continue\n",
-    "    trial = load_trial(trial_file, cut_ranges=cut_ranges)\n",
+    "    trial = load_trial(trial_file, remove_inactive=True)\n",
     "    globals().update(trial)\n",
     "    \n",
     "    J1,J2 = np.triu_indices(n_ind,1)\n",
@@ -353,6 +380,74 @@
     "fig_data           = dict(fig_data)\n",
     "\n",
     "pickle.dump( fig_data, open('data/figure5-data.pik','wb') )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Figures 7\n",
+    "\n",
+    "Fraction of time spent in the central half of the tank (while active?)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_data    = { k:defaultdict(list) for k in ['fractionInCenter_experiments'] }\n",
+    "d0          = R_cm*(1-1/np.sqrt(2)) # wall distance threshold to be in the center\n",
+    "for trial_file in tqdm(trials.index.drop(inactive_trials)):\n",
+    "    trial = load_trial(trial_file, remove_inactive=True)\n",
+    "# for trial_file in tqdm(trials.index):\n",
+    "#     trial = load_trial(trial_file)\n",
+    "    globals().update(trial)\n",
+    "    f = np.count_nonzero(d_wall>d0)/np.count_nonzero(np.isfinite(d_wall))\n",
+    "    fig_data['fractionInCenter_experiments'][pop,n_ind].append(f)\n",
+    "#     break\n",
+    "\n",
+    "pickle.dump( fig_data, open('data/figure7-data.pik','wb') )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cut fraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_fractions = defaultdict(list)\n",
+    "for trial_file in trials.index:\n",
+    "    trial = load_trial(trial_file)\n",
+    "    globals().update(trial)\n",
+    "    for k,v in cut_fraction.items():\n",
+    "        cut_fractions[pop,n_ind,k].append(cut_fraction[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for c in cut_fraction.keys():\n",
+    "    D = { k[:2]:v for k,v in cut_fractions.items() if k[2]==c }\n",
+    "    plt.boxplot(D.values(), labels=D.keys())\n",
+    "    plt.xticks(rotation=45, ha='right')\n",
+    "    plt.ylabel(c)\n",
+    "    plt.ylim(-0.01,1)\n",
+    "    plt.show()\n",
+    "#     break"
    ]
   },
   {
