- Edited the interpolation fix to allow deleting the position and/or orientation over a range of frames. If the quantity to interpolate is valid in the current frame, then the function looks for the last frame in which that quantity is valid and interpolates from there to the current frame (same behavior as before). If the quantity is nan in the current frame, then the function looks for the last frame in which the quantity is also nan and "interpolates" from there to the current frame, which effectively delete that quantity over that range of frame.   The intended use is as follows. To delete a quantity (position or orientation) between frames i1 and i2, first delete it in frame i1, then delete it in frame i2, then, staying in frame i2, interpolate it.

--- a/track.ipynb
+++ b/track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     data/videos/sf_wed_7dpf_groupA_n2_202104141325.avi                                                                                                                                                 \n",
+      "     Done                                                                                                                                                                                               "
+     ]
+    }
+   ],
    "source": [
     "# Video to track.\n",
-    "input_file   = '../raw_videos2/videos/pa_wed_28dpf_groupA_n5_202104281846.avi'\n",
+    "input_file   = 'data/videos/sf_wed_7dpf_groupA_n2_202104141325.avi'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
     "tracking_dir = 'output'\n",
@@ -123,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
