--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -46,8 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tank_diameter_vs_age = { 7:9.6, 14:10.4, 21:12.8, 28:17.7, 42:33.8,\n",
-    "                         56:33.8, 70:33.8, 84:3.8 }\n",
+    "tank_diameter_vs_age = { 7:9.6, 14:10.4, 21:12.8, 28:17.7, 42:24.2, 56:33.8, 70:33.8, 84:33.8 }\n",
     "\n",
     "# Extract trial metadata from the trial's filename.\n",
     "def parse_trial_file(trial_file, etho=False):\n",
@@ -597,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
